test/functions/bradc/resolution/arrayVsFn.good
arrayVsFn.chpl:1: error: 'A' has multiple definitions
arrayVsFn.chpl:3: note: redefined here
